crates/sui-adapter-transactional-tests/tests/mvcc/v0/child_of_child.exp
processed 14 tasks

init:
A: object(0,0)

task 1 'publish'. lines 8-69:
Error: error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpw7aoPQ:26:21
   │
22 │         let  grand  = Obj { id: object::new(ctx), value: 0 };
   │              ----- To use the variable mutably, it must be declared 'mut', e.g. 'mut grand'
   ·
26 │         ofield::add(&mut grand.id, KEY, parent);
   │                     ^^^^^^^^^^^^^ Invalid mutable borrow of immutable variable 'grand'



task 2 'programmable'. lines 71-73:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'view-object'. lines 75-75:
Error: task 3, lines 75-75. Unbound fake id 2,2

task 4 'programmable'. lines 77-78:
Error: INVALID TEST. Unknown object, object(2,2)

task 5 'view-object'. lines 80-80:
Error: task 5, lines 80-80. Unbound fake id 2,2

task 6 'programmable'. lines 82-83:
Error: INVALID TEST. Unknown object, object(2,2)

task 7 'view-object'. lines 85-88:
Error: task 7, lines 85-85. Unbound fake id 2,2

task 8 'programmable'. lines 90-91:
Error: INVALID TEST. Unknown object, object(2,2)

task 9 'programmable'. lines 93-94:
Error: INVALID TEST. Unknown object, object(2,2)

task 10 'programmable'. lines 96-100:
Error: INVALID TEST. Unknown object, object(2,2)

task 11 'programmable'. lines 102-103:
Error: INVALID TEST. Unknown object, object(2,2)

task 12 'programmable'. lines 105-106:
Error: INVALID TEST. Unknown object, object(2,2)

task 13 'programmable'. lines 108-109:
Error: INVALID TEST. Unknown object, object(2,2)
